--- a/index.html
+++ b/index.html
@@ -5,7 +5,66 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="page=header"> 
+     <nav class="navigation">
+      <ui class="navigation-list">
+        <li class="navigation-item">
+          <a  class="navigation-link" href="home.html">Главная</a>
+          <a  class="navigation-link" href="about.html">О Седоне</a>
+          <a  class="navigation-link" href="hotel.html">Гостинницы</a>
+        </li>
+      </ui>
+      <ui class="navigation-list navigation-user">
+        <li class="navigation-item">
+          <a  class="navigation-link" href="#">
+            <span class="visually-hidden">
+              Поиск
+            </span>  
+            </a>
+          <a  class="navigation-link" href="#">
+            <span class="visually-hidden">
+              Оповещения
+            </span>
+            </a>
+          <a  class="navigation-link" href="#">Вход</a>
+        </li>
+      </ui>  
+     </nav>
+    </header>
+    <main class="main-index">
+     <h1 class="navigation-link">SEDONA</h1>
+     <img class="logo" src="" alt="Логотип курорта Седона">
+     <section class="adventages">
+       <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p> 
+       <ul  class="adventages-list">
+         <li class="adventage-item">
+          <h3 class="adventages-title">Настоящий городок</h3>
+          <p class="adventages-description">— №1 — Седона — не аттракцион для туристов, там течёт 
+          своя жизнь</p>
+         </li> 
 
+         <li class="adventage-item">
+          <h3 class="adventages-title">Там есть мост дьявола</h3>
+          <p class="adventages-description">— №2 — Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li> 
+         <li class="adventage-item">
+            <h3 class="adventages-title">Небольшая площадь</h3>
+            <p class="adventages-description">— №3 — Все достопримечательности 
+              находятся очень близко</p>
+            </li> 
+         <li class="adventage-item">
+              <h3 class="adventages-title">Красивая дорога</h3>
+              <p class="adventages-description">— №4 — Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li> 
+         <li class="adventage-item">
+                <h3 class="adventages-title">Мало туристов</h3>
+                <p class="adventages-description">— №5 — Большинство едет в Гранд Каньон и толпится там</p>
+                </li>
+       </ul>
+      
+     </section>
+    </main>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </body>
