--- a/index.html
+++ b/index.html
@@ -5,67 +5,125 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="page=header"> 
-     <nav class="navigation">
-      <ui class="navigation-list">
-        <li class="navigation-item">
-          <a  class="navigation-link" href="home.html">Главная</a>
-          <a  class="navigation-link" href="about.html">О Седоне</a>
-          <a  class="navigation-link" href="hotel.html">Гостинницы</a>
+    <header> 
+     <nav>
+      <ui>
+        <li>
+          <a href="home.html">Главная</a>
+          <a href="about.html">О Седоне</a>
+          <a href="hotel.html">Гостинницы</a>
         </li>
       </ui>
-      <ui class="navigation-list navigation-user">
-        <li class="navigation-item">
-          <a  class="navigation-link" href="#">
-            <span class="visually-hidden">
-              Поиск
-            </span>  
-            </a>
-          <a  class="navigation-link" href="#">
-            <span class="visually-hidden">
-              Оповещения
-            </span>
-            </a>
-          <a  class="navigation-link" href="#">Вход</a>
+      <ui>
+        <li>
+          <a href="#">Поиск</a>
+          <a href="#">Оповещения</a>
+          <a href="#">Вход</a>
         </li>
       </ui>  
      </nav>
     </header>
-    <main class="main-index">
-     <h1 class="navigation-link">SEDONA</h1>
-     <img class="logo" src="" alt="Логотип курорта Седона">
-     <section class="adventages">
-       <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+    <main>
+      <section>
+        <h1>Welcome to the gargeous Sedona "because the grand Canyon sucks!"</h1>
+        <img src="" alt="Логотип курорта Седона">
+      </section>
+      <section>
+       <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p> 
-       <ul  class="adventages-list">
-         <li class="adventage-item">
-          <h3 class="adventages-title">Настоящий городок</h3>
-          <p class="adventages-description">— №1 — Седона — не аттракцион для туристов, там течёт 
-          своя жизнь</p>
+       <ol>
+         <li>
+          <div>
+            <h2>Настоящий городок</h2>
+            <p>Седона — не аттракцион для туристов, там течёт 
+              своя жизнь</p>
+            <img src="" alt="фото отеля">
+          </div>
+          <ul>
+            <li>
+              <h3>Жильё</h3>
+              <p>Рекомендуем пожить 
+               в настоящем мотеле, 
+               всё как в кино!</p>
+            </li>
+            <li>
+              <h3>Еда</h3>
+                <p>Всегда заказывайте
+                 топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li>
+              <h3>Сувениры</h3>
+              <p>Не только китайского, 
+               но и настоящего местного производства!</p>
+            </li>
+          </ul>
+         </li>
+         <li>
+           <div>
+             <img src="" alt="фотография моста дьявола">
+             <h3>Там есть мост дьявола</h3>
+             <p> Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        </div>
          </li> 
-
-         <li class="adventage-item">
-          <h3 class="adventages-title">Там есть мост дьявола</h3>
-          <p class="adventages-description">— №2 — Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          </li> 
-         <li class="adventage-item">
-            <h3 class="adventages-title">Небольшая площадь</h3>
-            <p class="adventages-description">— №3 — Все достопримечательности 
+         <li>
+            <h3>Небольшая площадь</h3>
+            <p> Все достопримечательности 
               находятся очень близко</p>
-            </li> 
-         <li class="adventage-item">
-              <h3 class="adventages-title">Красивая дорога</h3>
-              <p class="adventages-description">— №4 — Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-              </li> 
-         <li class="adventage-item">
-                <h3 class="adventages-title">Мало туристов</h3>
-                <p class="adventages-description">— №5 — Большинство едет в Гранд Каньон и толпится там</p>
-                </li>
-       </ul>
-      
+         </li> 
+         <li>
+              <h3>Красивая дорога</h3>
+              <p> Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+         </li> 
+         <li>
+                <h3>Мало туристов</h3>
+                <p> Большинство едет в Гранд Каньон и толпится там</p>
+         </li> 
+      </ol> 
+     </section>
+     <section>
+       <h2>Заинтересовались?</h2>
+       <p>Укажите предполагаемые даты поездки,
+        и мы покажем вам лучшие предложения гостиниц в Седоне
+        </p>
+        <a class="link" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
+     </section>
+     <section>
+       <h2>подпишитесь на рассылку</h2>
+       <p>Только полезная информация и никакого спама,
+        честное бойскаутское!</p>
+        <lable>Ваш - E-mail</lable>
+        <input type="text">
+        <button type="submit">подписаться</button>
      </section>
     </main>
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
   </body>
+  <footer>
+    <section>
+      <ul>
+        <li>
+          <a class="batton" href="http://twitter.com/htmlacademy_ru">
+            <cpan>Твиттер</cpan>
+          </a>
+        </li>
+        <li>
+          <a class="batton" href="http://www.facebook.com/htmlacademy">
+           <span>Фейсбук</span>
+          </a>
+        </li>
+        <li>
+          <a class="batton" href="http://www.youtube.com/c/HTMLAcademyRUS">
+           <span>Ютуб</span>
+          </a>
+        </li>
+      </ul>
+      <address>
+        <a class="contacts-phone" href="88128121212">+7(812)8121212</a>
+      </address>
+      <ul>
+        <li>
+          <a href="http://htmlacademy.ru/"></a>
+        </li>
+      </ul>
+    </section>
+  </footer>
 </html>
